last commit - mono version

--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,12 @@
                     <span>Vibration</span>
                     <div id="vibrationToggle" class="toggle-switch"></div>
                 </div>
+                <div class="setting-item">
+                    <span class="setting-label">Clear Highscores</span>
+                    <div class="toggle-btn" id="clearHighscoresToggle">
+                        <div class="toggle-circle"></div>
+                    </div>
+                </div>
             </div>
             <div class="button-group">
                 <button class="action-btn" id="saveSettingsBtn">Save</button>
