--- a/www/index.html
+++ b/www/index.html
@@ -6,128 +6,117 @@
     <meta http-equiv="Content-Security-Policy"
           content="default-src 'self' data: gap: https://ssl.gstatic.com https://googleads.g.doubleclick.net https://pagead2.googlesyndication.com 'unsafe-inline' 'unsafe-eval';
                    script-src 'self' https://googleads.g.doubleclick.net https://pagead2.googlesyndication.com 'unsafe-inline' 'unsafe-eval';
-                   style-src 'self' 'unsafe-inline';
+                   style-src 'self' https://fonts.googleapis.com 'unsafe-inline';
+                   font-src 'self' https://fonts.gstatic.com;
                    img-src 'self' data: https://googleads.g.doubleclick.net https://pagead2.googlesyndication.com;">
 
     <link rel="stylesheet" href="css/index.css">
     <title>Sandfall: Blocks</title>
 </head>
 <body>
-    <div id="loadingScreen" class="screen active">
-        <div class="logo">
-        </div>
-        <div class="progress-bar-wrapper" style="width: 80%; max-width: 400px; margin-top: 25px;">
-            <div id="loadingProgressBar" class="progress-bar"></div>
-            <div id="loadingProgressText" class="progress-label">0%</div>
-        </div>
-    </div>
+    <div id="app-container">
 
-    <div id="mainMenuScreen" class="screen">
-        <div class="screen-content main-menu">
+        <div id="loadingScreen" class="screen active">
             <div class="logo">
-                <span class="sand">Sand</span><span class="tetris">fall</span><br>
-                <span class="tetris">Blocks</span>
             </div>
-            <h3>Select difficulty:</h3>
-            <div class="difficulty-options">
-                <button class="difficulty-btn" id="easyBtn" data-level="1">Easy</button>
-                <button class="difficulty-btn active" id="mediumBtn" data-level="3">Normal</button>
-                <button class="difficulty-btn" id="hardBtn" data-level="10">Hard</button>
-            </div>
-            <div class="button-group">
-                <button class="action-btn" id="startGameBtn">Start Game</button>
-                <button class="action-btn" id="settingsBtn">Settings</button>
-            </div>
-            <div class="highscores-list">
-                <h3>Records 🏆</h3>
-                <ol id="highscoresList"></ol>
+            <div class="progress-bar-wrapper" style="width: 80%; max-width: 400px; margin-top: 25px;">
+                <div id="loadingProgressBar" class="progress-bar"></div>
+                <div id="loadingProgressText" class="progress-label">0%</div>
             </div>
         </div>
-    </div>
 
-    <div id="settingsScreen" class="screen">
-        <div class="screen-content settings-menu">
-            <h2>Settings</h2>
-            <div class="settings-options">
-                <div class="setting-item">
-                    <span>Music</span>
-                    <div id="musicToggle" class="toggle-switch active"></div>
+        <div id="mainMenuScreen" class="screen">
+            <div class="screen-content main-menu">
+                <div class="logo">
+                    <span class="sand">Sand</span><span class="tetris">fall</span><br>
+                    <span class="tetris">Blocks</span>
                 </div>
-                <div class="setting-item">
-                    <span>Sound Effects</span>
-                    <div id="soundToggle" class="toggle-switch active"></div>
+                <h4>Select difficulty:</h4>
+                <div class="difficulty-options">
+                    <button class="difficulty-btn" id="easyBtn" data-level="1">Easy</button>
+                    <button class="difficulty-btn active" id="mediumBtn" data-level="3">Normal</button>
+                    <button class="difficulty-btn" id="hardBtn" data-level="10">Hard</button>
                 </div>
-                <div class="setting-item">
-                    <span>Vibration</span>
-                    <div id="vibrationToggle" class="toggle-switch"></div>
+                <div class="button-group">
+                    <button class="action-btn" id="startGameBtn">Start Game</button>
+                    <button class="action-btn" id="settingsBtn">Settings</button>
                 </div>
-                <div class="setting-item">
-                    <span class="setting-label">Clear Highscores</span>
-                    <div class="toggle-btn" id="clearHighscoresToggle">
-                        <div class="toggle-circle"></div>
+                <div class="highscores-list">
+                    <h3>Records 🏆</h3>
+                    <ol id="highscoresList"></ol>
+                </div>
+            </div>
+        </div>
+
+        <div id="settingsScreen" class="screen">
+            <div class="screen-content settings-menu">
+                <h2>Settings</h2>
+                <div class="settings-options">
+                    <div class="setting-item">
+                        <span>Music</span>
+                        <div id="musicToggle" class="toggle-switch active"></div>
+                    </div>
+                    <div class="setting-item">
+                        <span>Sound Effects</span>
+                        <div id="soundToggle" class="toggle-switch active"></div>
+                    </div>
+                    <div class="setting-item">
+                        <span>Vibration</span>
+                        <div id="vibrationToggle" class="toggle-switch"></div>
+                    </div>
+                    <div class="setting-item">
+                        <span class="setting-label">Clear Highscores</span>
+                        <div class="toggle-btn" id="clearHighscoresToggle">
+                            <div class="toggle-circle"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="button-group">
+                    <button class="action-btn" id="saveSettingsBtn">Save</button>
+                    <button class="action-btn" id="backToMainFromSettings">Back</button>
+                </div>
+            </div>
+        </div>
+
+        <div id="pauseScreen" class="screen">
+            <div class="screen-content pause-screen">
+                <h2>Pause</h2>
+                <div class="button-group">
+                    <button class="action-btn" id="resumeBtn">Continue</button>
+                    <button class="action-btn" id="newGameBtn">New Game</button>
+                    <button class="action-btn" id="exitToMainBtn">Exit to menu</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="game-container" id="gameContainer">
+            <button class="pause-btn" id="pauseBtn">❚❚</button>
+            <div class="ui-panel">
+                <div class="score-info">
+                    <div>Score: <span id="score">0</span></div>
+                    <div>Level: <span id="level">1</span></div>
+                    <div>Destroyed: <span id="removed">0</span></div>
+                </div>
+
+                <div class="next-piece">
+                    <canvas id="nextCanvas" width="80" height="80"></canvas>
+                </div>
+            </div>
+            <div class="game-wrapper" id="gameArea">
+                <div class="game-area">
+                    <canvas id="gameCanvas" width="200" height="400"></canvas>
+                    <div id="comboText" class="combo-text"></div>
+                    <div id="gameOver" class="game-over">
+                        <h2>Game Over!</h2>
+                        <p>Final score: <span id="finalScore">0</span></p>
+                        <button class="action-btn" id="restartBtn">New Game</button>
+                        <button class="action-btn" id="exitFromGameOverBtn">Menu</button>
                     </div>
                 </div>
             </div>
-            <div class="button-group">
-                <button class="action-btn" id="saveSettingsBtn">Save</button>
-                <button class="action-btn" id="backToMainFromSettings">Back</button>
-            </div>
         </div>
+
     </div>
-
-    <div id="pauseScreen" class="screen">
-        <div class="screen-content pause-screen">
-            <h2>Pause</h2>
-            <div class="button-group">
-                <button class="action-btn" id="resumeBtn">Continue</button>
-                <button class="action-btn" id="newGameBtn">New Game</button>
-                <button class="action-btn" id="exitToMainBtn">Exit to menu</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="game-container" id="gameContainer">
-        <button class="pause-btn" id="pauseBtn">❚❚</button>
-        <div class="ui-panel">
-            <div class="score-info">
-                <div>Score: <span id="score">0</span></div>
-                <div>Level: <span id="level">1</span></div>
-                <div>Destroyed: <span id="removed">0</span></div>
-            </div>
-
-            <div class="next-piece">
-                <canvas id="nextCanvas" width="80" height="80"></canvas>
-            </div>
-        </div>
-        <div class="game-wrapper">
-            <div class="progress-container">
-                <span id="progress-start">0</span>
-                <div class="progress-bar-wrapper">
-                    <div id="scoreProgressBar" class="progress-bar"></div>
-                    <div id="currentScoreLabel" class="progress-label">0</div>
-                </div>
-                <span id="progress-end">1K</span>
-            </div>
-            <div class="game-area" id="gameArea">
-                <canvas id="gameCanvas" width="200" height="400"></canvas>
-
-                <div id="comboText" class="combo-text"></div>
-                <div id="gameOver" class="game-over">
-                    <h2>Game Over!</h2>
-                    <p>Final score: <span id="finalScore">0</span></p>
-                    <button class="action-btn" id="restartBtn">New Game</button>
-                    <button class="action-btn" id="exitFromGameOverBtn">Menu</button>
-                </div>
-            </div>
-        </div>
-        <div class="controls" id="controls">
-            <button class="control-btn rotate-btn" id="rotateBtn">↻</button>
-            <button class="control-btn left-btn" id="leftBtn">←</button>
-            <button class="control-btn down-btn" id="downBtn">↓</button>
-            <button class="control-btn right-btn" id="rightBtn">→</button>
-        </div>
-    </div>
-
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
 
